--- a/example.config.yml
+++ b/example.config.yml
@@ -35,6 +35,9 @@ drupal_site_uuid: 73ee435f-88fd-4b45-9c00-c09c54510359
 # requests via GPIO LEDs.
 nginx_access_log: "/var/log/nginx/access.log"
 
+# Set a secure MySQL root password.
+mysql_root_password: supersecure
+
 # Drupal filesystem configuration.
 nfs_mount_dir: /mnt/nfs
 
