--- a/testing/digitalocean/provision.yml
+++ b/testing/digitalocean/provision.yml
@@ -40,13 +40,6 @@
       when: item.1.droplet is defined
       with_indexed_items: '{{ created_droplets.results }}'
 
-    - name: Print the DigitalOcean droplet information.
+    - name: Print the DigitalOcean droplet group information.
       debug:
         var: groups.do
-
-- hosts: do
-  remote_user: root
-
-  tasks:
-    - name: Wait for port 22 to become available.
-      local_action: "wait_for port=22 host={{ inventory_hostname }}"
