A couple more small fixes following up for #61.

--- a/playbooks/web/vars.yml
+++ b/playbooks/web/vars.yml
@@ -57,6 +57,7 @@ php_install_from_source: true
 # Some example versions to try: php-5.5.33, php-5.6.19, php-7.0.4.
 php_source_version: "php-7.0.4"
 php_source_make_command: "make --jobs={{ ansible_processor_count }}"
+php_source_install_gmp_path: "/usr/include/arm-linux-gnueabihf/gmp.h"
 php_source_configure_command: >
   ./configure
   --prefix={{ php_source_install_path }}
