--- a/example.config.yml
+++ b/example.config.yml
@@ -38,6 +38,12 @@ nginx_access_log: "/var/log/nginx/access.log"
 # Set a secure MySQL root password.
 mysql_root_password: supersecure
 
+# MySQL options.
+# mysql_innodb_buffer_pool_size: "256M" # For 512MB RAM.
+mysql_innodb_buffer_pool_size: "512M" # For 1GB RAM.
+# mysql_myisam_sort_buffer_size: "32M" # For 512MB RAM.
+mysql_myisam_sort_buffer_size: "64M" # For 1GB RAM.
+
 # Drupal filesystem configuration.
 nfs_mount_dir: /mnt/nfs
 
