--- a/playbooks/balancer/led-monitor.yml
+++ b/playbooks/balancer/led-monitor.yml
@@ -10,3 +10,7 @@
   async: 45
   poll: 0
   when: deploy_target == 'pi' and 'led-log-monitor' not in led_monitor_check.stdout
+
+- name: Set the GPIO LED to Green.
+  shell: "/usr/bin/rgb green"
+  when: deploy_target == 'pi'
