Issue #79: Add no_subtree_squash option to NFS export.

--- a/playbooks/web/vars.yml
+++ b/playbooks/web/vars.yml
@@ -25,7 +25,7 @@ drush_keep_updated: false
 
 # NFS configuration.
 nfs_share_dir: /srv/nfs
-nfs_exports: { "/srv/nfs *(rw,sync,no_root_squash)" }
+nfs_exports: { "/srv/nfs *(rw,sync,no_root_squash,no_subtree_check)" }
 # nfs_mount_dir: /mnt/nfs # defined in global vars file.
 
 # Munin settings.
