--- a/playbooks/database/vars.yml
+++ b/playbooks/database/vars.yml
@@ -24,6 +24,7 @@ mysql_databases:
     replicate: 1
 
 mysql_bind_address: "{{ ansible_all_ipv4_addresses[0] }}"
+mysql_skip_name_resolve: yes
 
 # Memory settings.
 mysql_key_buffer_size: "32M"
