--- a/playbooks/web/tasks/led-monitor.yml
+++ b/playbooks/web/tasks/led-monitor.yml
@@ -10,3 +10,10 @@
   async: 45
   poll: 0
   when: deploy_target == 'pi' and 'led-log-monitor' not in led_monitor_check.stdout
+
+- name: Add a cron job to automatically start the log monitor after reboot.
+  cron:
+    name: "Monitor web requests with the RGB LED"
+    special_time: reboot
+    job: "/usr/bin/led-log-monitor &"
+  when: deploy_target == 'pi'
