--- a/testing/vagrant/Vagrantfile
+++ b/testing/vagrant/Vagrantfile
@@ -88,7 +88,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
       ansible.inventory_path = "inventory"
       ansible.limit = "all"
       ansible.extra_vars = {
-        mysql_datadir: "/var/lib/mysql"
+        mysql_datadir: "/var/lib/mysql",
+        php_source_install_gmp_path: "/usr/include/x86_64-linux-gnu/gmp.h"
       }
     end
   end
