Issue #95: Use config.yml for tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ env:
 
 install:
   - docker pull geerlingguy/docker-debian8-ansible:latest
+  - cp example.config.yml config.yml
 
 script:
   - ./testing/docker/docker-playbook-test.sh
