Issue #95: Add another missing dependency and extra var.

--- a/playbooks/database/database.yml
+++ b/playbooks/database/database.yml
@@ -12,6 +12,7 @@
       with_items:
         - sudo
         - openssh-server
+        - cron
 
   roles:
     - { role: geerlingguy.firewall, tags: ['firewall'] }
