Issue #95: Don't mount NFS volume when testing in Docker.

--- a/playbooks/web/tasks/nfs.yml
+++ b/playbooks/web/tasks/nfs.yml
@@ -32,3 +32,4 @@
     fstype: nfs
     opts: "noauto,x-systemd.automount,x-systemd.device-timeout=10,timeo=14"
     state: mounted
+  when: deploy_target != 'docker'
