--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,10 @@
 ---
 services: docker
 
-env:
-  matrix:
-    # Test each playbook individually.
-    - playbook: balancer
-    - playbook: database
-    - playbook: web
-    # - playbook: drupal
-
 install:
-  - docker pull geerlingguy/docker-debian8-ansible:latest
+  - docker pull geerlingguy/docker-debian9-ansible:latest
   - cp example.config.yml config.yml
 
 script:
-  - "travis_wait 30 ./testing/docker/docker-playbook-test.sh"
+  # - "travis_wait 30 ./testing/docker/docker-playbook-test.sh"
+  - ./testing/docker/docker-playbook-test.sh
