Add Drupal 8 Kubernetes deployment and service definitions, and update vars.

--- a/main.yml
+++ b/main.yml
@@ -39,4 +39,10 @@
 
   tasks:
     - include_tasks: tasks/nfs.yml
+      tags: ['nfs']
+
     - import_tasks: tasks/led-monitor.yml
+      tags: ['leds']
+
+    - import_tasks: tasks/drupal-k8s.yml
+      tags: ['drupal']
