--- a/files/ingress-traefik.yml
+++ b/files/ingress-traefik.yml
@@ -1,12 +1,12 @@
 ---
-# Source: https://raw.githubusercontent.com/containous/traefik/master/examples/k8s/traefik-deployment.yaml
+# Source: https://raw.githubusercontent.com/containous/traefik/master/examples/k8s/traefik-ds.yaml
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: traefik-ingress-controller
   namespace: kube-system
 ---
-kind: Deployment
+kind: DaemonSet
 apiVersion: extensions/v1beta1
 metadata:
   name: traefik-ingress-controller
@@ -14,10 +14,6 @@ metadata:
   labels:
     k8s-app: traefik-ingress-lb
 spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      k8s-app: traefik-ingress-lb
   template:
     metadata:
       labels:
@@ -26,27 +22,41 @@ spec:
     spec:
       serviceAccountName: traefik-ingress-controller
       terminationGracePeriodSeconds: 60
+      hostNetwork: true
       containers:
       - image: traefik
         name: traefik-ingress-lb
+        ports:
+        - name: http
+          containerPort: 80
+          hostPort: 80
+        securityContext:
+          capabilities:
+            drop:
+            - ALL
+            add:
+            - NET_BIND_SERVICE
         args:
         - --api
         - --kubernetes
         - --logLevel=INFO
----
-kind: Service
-apiVersion: v1
-metadata:
-  name: traefik-ingress-service
-  namespace: kube-system
-spec:
-  selector:
-    k8s-app: traefik-ingress-lb
-  ports:
-    - protocol: TCP
-      port: 80
-      name: web
-    - protocol: TCP
-      port: 8080
-      name: admin
-  type: NodePort
+# A NodePort in front of the service may be simpler for the use case of having
+# an external proxy front everything, just by hitting one IP, then letting K8s
+# do all the routing. But it's slightly annoying in the local Pi setup, because
+# I don't want to waste one Pi running Nginx, HAProxy, or something similar,
+# just to act as an external LoadBalancer. Though I may change things in the
+# future...
+# ---
+# kind: Service
+# apiVersion: v1
+# metadata:
+#   name: traefik-ingress-service
+#   namespace: kube-system
+# spec:
+#   selector:
+#     k8s-app: traefik-ingress-lb
+#   ports:
+#     - protocol: TCP
+#       port: 80
+#       name: web
+#   type: NodePort
