--- a/files/default-http-backend.yml
+++ b/files/default-http-backend.yml
@@ -23,7 +23,7 @@ spec:
         # Any image is permissible as long as:
         # 1. It serves a 404 page at /
         # 2. It serves 200 on a /healthz endpoint
-        image: gcr.io/google_containers/defaultbackend-arm:1.4
+        image: {{ default_http_backend_image }}
         livenessProbe:
           httpGet:
             path: /healthz
