--- a/setup/drupal/docker-compose.yml
+++ b/setup/drupal/docker-compose.yml
@@ -4,15 +4,14 @@ version: '3'
 services:
   drupal:
     build: ./
-    image: pidramble/drupal:7.1
-    container_name: drupal
+    image: pidramble/drupal:latest
+    container_name: pidramble-drupal
     environment:
-      DRUPAL_DATABASE_HOST: drupal-mysql
+      DRUPAL_DATABASE_HOST: mysql
     ports:
       - "80:80"
     restart: always
-    volumes:
-      - ./web:/var/www/html:rw,delegated
+    volumes: []
 
   mysql:
     image: mysql:5.7
