--- a/tasks/test-setup.yml
+++ b/tasks/test-setup.yml
@@ -8,9 +8,11 @@
     mode: 0640
   when: deploy_target == 'docker'
 
-- name: Override vars for test environments.
+- name: Override vars for Docker test environment.
   set_fact:
     docker_version: 18.04.0~ce~3-0~debian
+    mysql_container_image: 'mysql:5.7'
+    default_http_backend_image: 'k8s.gcr.io/defaultbackend:1.0'
     kubernetes_kubelet_extra_args: '--fail-swap-on=false'
     kubernetes_allow_pods_on_master: True
   when: deploy_target == 'docker'
@@ -18,6 +20,8 @@
 - name: Override vars for non-ARM environments.
   set_fact:
     docker_version: 18.04.0~ce~3-0~debian
+    mysql_container_image: 'mysql:5.7'
+    default_http_backend_image: 'k8s.gcr.io/defaultbackend:1.0'
   when:
     - deploy_target != 'docker'
     - deploy_target != 'pi'
