Fixes #104: Build initial Drupal 8 codebase if not present.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ services: docker
 addons:
   hosts:
     - cluster.pidramble.test
+    - kube1
 
 install:
   - docker pull geerlingguy/docker-debian9-ansible:latest
