--- a/files/drupal8-mysql.yml
+++ b/files/drupal8-mysql.yml
@@ -36,7 +36,7 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - kube5
+          - {{ mysql_node_affinity_hostname }}
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
