--- a/tasks/nfs.yml
+++ b/tasks/nfs.yml
@@ -24,6 +24,12 @@
     - "{{ nfs_share_dir }}"
     - "{{ nfs_mount_dir }}"
 
+- name: Ensure extra NFS dirs exist.
+  file:
+    path: "{{ item }}"
+    state: directory
+  with_items: "{{ nfs_extra_dirs }}"
+
 # Mount configuration.
 - name: Ensure the NFS volume is mounted.
   mount:
