--- a/vars/main.yml
+++ b/vars/main.yml
@@ -59,4 +59,4 @@ nfs_exports: { "/srv/nfs *(rw,sync,no_root_squash,no_subtree_check)" }
 # nfs_mount_dir: /mnt/nfs # defined in global vars file.
 nfs_extra_dirs:
   - docker-registry
-  - drupal-files
+  - drupal8-files
