--- a/files/drupal8.yml
+++ b/files/drupal8.yml
@@ -1,3 +1,34 @@
+---
+# PersistentVolume definition for NFS mount for Drupal 8 files.
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: drupal8-files-pv
+  labels:
+    app: drupal8
+spec:
+  capacity:
+    storage: 5Gi
+  accessModes:
+    - ReadWriteOnce
+  nfs:
+    path: {{ nfs_share_dir }}/drupal8-files
+    server: {{ groups.dramble[0] }}
+  persistentVolumeReclaimPolicy: Retain
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: drupal8-files-pvc
+  labels:
+    app: drupal8
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 5Gi
+---
 # Drupal 8 Service definition.
 apiVersion: v1
 kind: Service
@@ -48,3 +79,10 @@ spec:
           ports:
             - containerPort: 80
               name: drupal8
+          volumeMounts:
+            - mountPath: /var/www/html/sites/default/files
+              name: drupal8-files
+      volumes:
+        - name: drupal8-files
+          persistentVolumeClaim:
+            claimName: drupal8-files-pvc
